syntax = "proto3";

package golem.cloud.grant.v1;

import public "golem/common/account_id.proto";
import public "golem/common/empty.proto";
import public "golem/cloud/grant/v1/grant_error.proto";
import public "golem/cloud/grant/role.proto";

service CloudGrantService {
  rpc GetSelfGrants (golem.common.Empty) returns (GetSelfGrantsResponse);
  rpc GetGrants (GetGrantsRequest) returns (GetGrantsResponse);
  rpc DeleteGrant (DeleteGrantRequest) returns (DeleteGrantResponse);
  rpc GetGrant (GetGrantRequest) returns (GetGrantResponse);
  rpc PutGrant (PutGrantRequest) returns (PutGrantResponse);
}

message GetSelfGrantsResponse {
  oneof result {
    GetSelfGrantsSuccessResponse success = 1;
    golem.cloud.grant.v1.GrantError error = 2;
  }
}

message GetSelfGrantsSuccessResponse {
  golem.common.AccountId accountId = 1;
  repeated golem.cloud.grant.Role roles = 2;
}

message GetGrantsRequest {
  golem.common.AccountId accountId = 1;
}

message GetGrantsResponse {
  oneof result {
    GetGrantsSuccessResponse success = 1;
    golem.cloud.grant.v1.GrantError error = 2;
  }
}

message GetGrantsSuccessResponse {
  repeated golem.cloud.grant.Role roles = 1;
}

message DeleteGrantRequest {
  golem.common.AccountId accountId = 1;
  golem.cloud.grant.Role role = 2;
}

message DeleteGrantResponse {
  oneof result {
    golem.common.Empty success = 1;
    golem.cloud.grant.v1.GrantError error = 2;
  }
}

message GetGrantRequest {
  golem.common.AccountId accountId = 1;
  golem.cloud.grant.Role role = 2;
}

message GetGrantResponse {
  oneof result {
    golem.cloud.grant.Role role = 1;
    golem.cloud.grant.v1.GrantError error = 2;
  }
}

message PutGrantRequest {
  golem.common.AccountId accountId = 1;
  golem.cloud.grant.Role role = 2;
}

message PutGrantResponse {
  oneof result {
    golem.cloud.grant.Role role = 1;
    golem.cloud.grant.v1.GrantError error = 2;
  }
}
